--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header h1 {
 }
 
 main {
-    width: 100%;
+    width: 100vw;
     min-height: 100vh;
     background: linear-gradient(#18acfe, #0166e1);
 
@@ -39,7 +39,7 @@ main {
 main form{
     margin-top: 5%;
     width: 35%;
-    height: 75%vh;
+    height: 75vh;
     background-color: #b0b3b8;
     box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.4) inset 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 18px;
